GMSD-295 GYM- Missing Table Headings in Workout Plan Details

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
@@ -111,8 +111,8 @@
                                                                                     Workout Name
                                                                                 </th>
                                                                                 <th>Set</th>
-                                                                                <th></th>
-                                                                                <th></th>
+                                                                                <th>Weight-Repetition-Duration</th>
+                                                                                <th>Action</th>
                                                                             </tr>
                                                                         </thead>
                                                                         @foreach (var item in @Model.GymWorkoutPlanDetailList.Where(x => x.WorkoutDay == day && x.WorkoutWeek == week))
