--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -27,7 +27,7 @@
             <div class="col-lg-3">
                 <div class="card">
                     <div class="card-body">
-                        @if (adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.ViewFolder.ToString())))
+                        @if (adminRoleMediaFolderActionModel != null && adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.ViewFolder.ToString())))
                         {
                             <div class="files-nav">
                                 <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
@@ -61,7 +61,7 @@
                             </div>
 
                             <!-- Upload File Button -->
-                            @if (adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.UploadFile.ToString())))
+                            @if (adminRoleMediaFolderActionModel != null && adminRoleMediaFolderActionModel.SelectedMediaActions.Any(x => x.Equals(MediaFolderActionEnum.UploadFile.ToString())))
                             {
                                 <form asp-action="UploadFile" asp-controller="MediaManager" enctype="multipart/form-data" method="post" style="display:inline;">
                                     <label class="btn btn-sm btn-soft-primary" for="imageUpload">
