--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -25,7 +25,7 @@
         {
             <div class="file-box">
                 <div class="align-items-center card-action-block d-flex flex-row-reverse justify-content-between mb-2">
-                    @if (adminRoleMediaFolderActionModel.SelectedMediaActions
+                    @if (adminRoleMediaFolderActionModel != null && adminRoleMediaFolderActionModel.SelectedMediaActions
                    .Any(x => x.Equals(MediaFolderActionEnum.DeleteFile.ToString())))
                     {
                         <a class="download-icon-link" data-media-id="@media.MediaId"
@@ -39,9 +39,9 @@
                 </div>
                 <div class="d-flex align-items-center justify-content-center flex-column">
                     <div class="card-image-info">
-                        <img src="@media.MediaPath" alt="@media.MediaName" class="img-thumbnail">
+                            <img src="@media.Path" alt="@media.FileName" class="img-thumbnail">
                     </div>
-                    <h6 class="text-truncate" title="@media.MediaName">@media.MediaName</h6>
+                        <h6 class="text-truncate" title="@media.FileName">@media.FileName</h6>
                 </div>
             </div>
         }
@@ -62,12 +62,12 @@
                 {
                     <tr>
                         <td>
-                            <img src="@media.MediaPath" alt="@media.MediaName" class="img-thumbnail" style="width: 80px;">
+                            <img src="@media.Path" alt="@media.FileName" class="img-thumbnail" style="width: 80px;">
                         </td>
-                        <td>@media.MediaName</td>
+                        <td>@media.FileName</td>
                         <td>
                             <div class="d-flex align-items-center">
-                                @if (adminRoleMediaFolderActionModel.SelectedMediaActions
+                                @if (adminRoleMediaFolderActionModel != null && adminRoleMediaFolderActionModel.SelectedMediaActions
                                .Any(x => x.Equals(MediaFolderActionEnum.DeleteFile.ToString())))
                                 {
                                     <a class="download-icon-link me-2" data-media-id="@media.MediaId"
