--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -39,9 +39,9 @@
                 </div>
                 <div class="d-flex align-items-center justify-content-center flex-column">
                     <div class="card-image-info">
-                            <img src="@media.Path" alt="@media.FileName" class="img-thumbnail">
+                        <img src="@media.Path" alt="@media.FileName" class="img-thumbnail">
                     </div>
-                        <h6 class="text-truncate" title="@media.FileName">@media.FileName</h6>
+                    <h6 class="text-truncate" title="@media.FileName">@media.FileName</h6>
                 </div>
             </div>
         }
@@ -62,7 +62,7 @@
                 {
                     <tr>
                         <td>
-                            <img src="@media.Path" alt="@media.FileName" class="img-thumbnail" style="width: 80px;">
+                            <img src="@media.Path" alt="@media.FileName" class="img-thumbnail" style="width: 40px; height:40px">
                         </td>
                         <td>@media.FileName</td>
                         <td>
