--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -53,7 +53,7 @@
             <div class="col-lg-9">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <span class="card-title">Media Manager Upload</span>
+                        <span class="card-title">Media Manager Upload: @Model.MediaRootFolder.RootFolderName</span>
                         <div class="d-flex align-items-center">
                             <!-- Toggle Switch -->
                             <div class="form-check form-switch me-3">
