--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/CreateEdit.cshtml
@@ -46,7 +46,7 @@
                                 
                                 <div class="col-lg-8">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.NarrationDescription, new { @class = "form-label"})
+                                        @Html.LabelFor(x => x.NarrationDescription, new { @class = "form-label required" })
                                         @Html.TextAreaFor(x => x.NarrationDescription, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.NarrationDescription)
                                     </div>
