--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/List.cshtml
@@ -11,8 +11,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title"> Narration List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Narration</a>
+                        <span class="card-title">Account Narration List</span>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Account Narration</a>
                         
                     </div>
                     <div class="card-body">
