--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/_List.cshtml
@@ -21,7 +21,7 @@
                             <td>@item.AccGLSetupNarrationId</td>
                             <td>@item.NarrationType</td>
                             <td>@item.NarrationDescription</td>
-                            <td>
+                            <td class="text-center">
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center">
