--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -70,8 +70,8 @@
                             <td style="text-align: center; width: 0px">
                                 <img src="@media.Path" class="thumb-xs">
                             </td>
-                            <td>@media.FileName</td>
-                            <td><a href="../MediaManager/GetMediaDetails?mediaId=@media.MediaId">@media.FolderName</a></td>
+                            <td><a href="../MediaManager/GetMediaDetails?mediaId=@media.MediaId">@media.FileName</a></td>
+                            <td>@media.FolderName</td>
                             <td>@media.Size KB</td>
                             <td class="text-center">
                                 @if (isDownloadAllowed)
