--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -95,7 +95,7 @@
                                 {
                                     <span class="m-2">|</span>
                                 }
-                                <a href="../MediaManager/GetMediaDetails?mediaId=@media.MediaId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-eye"></i></a>
+                                <a href="../MediaManager/GetMediaDetails?mediaId=@media.MediaId" title="Update" class="btn btn-sm btn-soft-warning btn-circle me-2"><i class="fas fa-eye"></i></a>
                             </td>
                         </tr>
                     }
